[tool.poetry]
name = "exp-tecton"
version = "0.0.0"
description = "Reproduce tecton issue"
authors = ['davide anghileri']

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.8"
tecton = "^0.9.14"

[tool.poetry.dev-dependencies]
pyspark = "~3.3.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-xdist = "^2.5.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "exp_tecton"
]